--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -43,7 +43,7 @@ jobs:
     - name: production 브랜치로 이동
       uses: actions/checkout@v4
       with:
-        ref: main
+        ref: production
     - name: JDK 17 설치
       uses: actions/setup-java@v4
       with:
