--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,7 @@ logging:
 
 spring:
     jpa:
+        open-in-view: false
         properties:
             hibernate:
                 show_sql: true
